# happygene

./: .gitignore  AGENT10_VECTORIZATION_SUMMARY.md  AGENT12_FINAL_VERIFICATION_REPORT.md  AGENT7_EXECUTION_REPORT.md  AGENT8_BEFORE_AFTER.md  AGENT8_CYCLE3_SUMMARY.md  AGENT_NATIVE_IMPLEMENTATION_CHECKLIST.md  AGENT_NATIVE_INDEX.md  AGENT_NATIVE_QUICK_REFERENCE.md  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURE_DIAGRAMS.txt  BACKLOG_AI_CAPABILITIES.md  BACKWARDS_COMPATIBILITY_REPORT.md  BATCH3_EXECUTION_REPORT.md  BATCH4_EXECUTION_REPORT.md  BATCH4_TASK_PLAN.md  BATCH_COMPLETION_SUMMARY.md  BATCH_COMPLETION_WEEK10-12.md  BATCH_METHODS_QUICK_REFERENCE.md  BATCH_REPORT_WEEK7-9.md  BATCH_WEEK_4_6_COMPLETION_REPORT.md  BATCH_WEEK_4_6_PLAN.md  BENCHMARK_RESULTS.md  BIOOSS_BEST_PRACTICES.md  BUG_HUNT_DELIVERABLES_INDEX.md  BUG_HUNT_FINAL_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_REFACTORING_LOG.md  CODE_QUALITY_REPORT.md  COMPETITIVE_SUMMARY.txt  CONTRIBUTING.md  COVERAGE_FORENSICS_REPORT.md  CSF_CRITICAL_SUCCESS_FACTORS.md  CSF_DELIVERY_MANIFEST.md  CSF_FINAL_SYNTHESIS.md  CSF_IMPLEMENTATION_GUIDE.md  CSF_PRIORITY_MATRIX.md  CSF_QUICK_START.md  CSF_RESEARCH_INDEX.md  (+101 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  dependabot.yml  pages.yml  pr-title.yml  publish.yml  quality.yml  release-please.yml  test.yml
.hypothesis/constants/: 0721506f001552f9  11a0c1aa03102f2b  142ed29a84a60863  1474ab56d01b3862  1a89957b3b76105f  1d317d153e6ec10e  1f8d7f0491341e04  1f8ea70b25e06d17  35d5f18bedb468a3  482c3c1d94ac4bf5  576a07d095af370e  589a37926df2e4fc  5c90d9c9a12d0634  6d95e1a285e24338  6ddbf2bd18799a8c  6f421bc1d4482207  7ac9048bbd627459  7c23b897c70f375d  7cacf04831c6afa0  80dbec27328ff599  82093017c323ebd9  83bdc90bfa4a1dee  8ae6f196902bebcf  8d29a669889aab1d  92d169a5250db2ff  982c615c1ce375c6  9d34b7d16413c27c  a219820147c59822  af99a4097426e9a9  c523b9eeb5fed8b7  cd981a6d9dd2486a  d49edd82ad3327dc  dc397f5808ea9c19  dd8044d52aa35cf2  e33622d95a74cb40  f1eae2cba2b28435
TEMPLATES/: .github_workflows_tests.yml  CONTRIBUTING.md  PRE_COMMIT_CHECKLIST.txt  README.md  pyproject.toml
changelog/: .changelogrc  CHANGELOG.md
docker/: Dockerfile.sim  docker-compose.yml
docs/: ADR-001-ode-solver-selection.md  ADR-002-modular-monolith-architecture.md  ADR-003-yaml-pydantic-configuration.md  ADR-004-git-and-provenance.md  ADR-007-cloud-local-orchestration.md  ADR-INDEX.md  ARCHITECTURE.md  CLOUD_LOCAL_IMPLEMENTATION.md  COST_REFERENCE.md  TDD_TEMPLATES.md  api-reference.md  getting-started.md  index.md  user-guide.md
docs/examples/: 01_hello_world.ipynb  02_batch_processing.ipynb  03_visualization.ipynb  04_copasi_workflow.ipynb  05_parameter_sensitivity.ipynb  index.md
docs/plans/: 2026-02-08-phase1-architecture-adrs.md  2026-02-08-phase1-implementation-plan.md  2026-02-08-phase2-architecture-adrs.md  2026-02-08-phase2-implementation-plan.md  2026-02-08-phase2-task-plan.md
docs/source/: api.rst  conf.py  getting_started.md  index.rst  theory.rst
docs/source/examples/: __init__.py  regulatory_network.md  simple_duplication.md
engine/config/: __init__.py  loaders.py
engine/domain/: config.py  models.py
engine/io/: __init__.py  output.py  sbml_export.py  sbml_import.py  sbml_validator.py
engine/simulator/: __init__.py  batch.py
engine/visualization/: __init__.py  dashboard.py  exporter.py  plotter.py
examples/: benchmark.py  morris_workflow.py  regulatory_network.py  regulatory_network_advanced.py  simple_duplication.py  sobol_workflow.py
happygene/: __init__.py  base.py  cli.py  conditions.py  datacollector.py  entities.py  expression.py  model.py  mutation.py  regulatory_expression.py  regulatory_network.py  selection.py
happygene/analysis/: __init__.py  _internal.py  batch.py  correlation.py  morris.py  output.py  response.py  sobol.py
scripts/: check_coverage_by_tier.py
tests/: test_base.py  test_datacollector.py  test_edge_cases.py  test_edge_cases_v2.py  test_entities.py  test_examples.py  test_expression.py  test_integration.py  test_integration_v2.py  test_memory_profile.py  test_model.py  test_mutation.py  test_performance.py  test_regulatory_expression.py  test_regulatory_network.py  test_selection.py  test_theory.py
tests/analysis/: conftest.py  test_batch.py  test_correlation.py  test_morris.py  test_output.py  test_response.py  test_sobol.py
tests/unit/: test_batch_simulator.py  test_cli_commands.py  test_cli_config_loading.py  test_config_validation.py  test_domain_models.py  test_output_handling.py  test_sbml_export.py  test_sbml_import.py  test_sbml_roundtrip.py  test_visualization_dashboard.py  test_visualization_export.py  test_visualization_plots.py
