[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "happygene"
version = "0.1.0-dev"
description = "Interdependent, parameterized simulations modeling DNA repair mechanisms at multi-scale"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Eric Mumford", email = "eric@heymumford.com"}
]
keywords = [
    "biology",
    "simulation",
    "dna-repair",
    "computational-biology",
    "agent-based-modeling",
    "systems-biology"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "h5py>=3.9",
    "attrs>=23.1",
    "python-dateutil>=2.8",
    "plotly>=5.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.86",
    "mypy>=1.5",
    "ruff>=0.1",
    "black>=23.9",
    "isort>=5.12",
]

mcp = [
    "fastmcp>=0.1",
    "anthropic>=0.7",
]

ui = [
    "plotly>=5.17",
    "pandas>=2.1",
]

science = [
    "scikit-learn>=1.3",
    "SALib>=1.4",
    "pymc>=5.10",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings>=0.24",
]

io = [
    "python-libsbml>=5.20",
    "lxml>=4.9",
]

all = [
    "happygene[dev,mcp,ui,science,docs,io]"
]

[project.urls]
Homepage = "https://github.com/heymumford/happygene"
Documentation = "https://heymumford.github.io/happygene"
Repository = "https://github.com/heymumford/happygene"
Issues = "https://github.com/heymumford/happygene/issues"

[project.scripts]
happygene = "happygene.cli:main"

[tool.hatch.version]
path = "happygene/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["happygene"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["engine/tests", "tests"]
python_files = ["test_*.py"]
addopts = """
    -v
    --strict-markers
    --cov=engine
    --cov-report=term-missing
    --cov-report=html
    --cov-fail-under=75
"""
markers = [
    "unit: unit tests (pure functions)",
    "integration: integration tests (multi-component)",
    "validation: validation tests (cross-tool)",
    "chaos: chaos engineering tests (fault injection)",
    "slow: slow tests (parameter sweeps, large simulations)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["F841"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv", "build", "dist"]
