[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "happygene"
version = "0.1.0"
description = "Framework for simulating gene network evolution with selection, mutation, and expression dynamics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Eric Mumford" },
]
keywords = ["genetics", "evolution", "simulation", "agent-based-modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "black>=24.0",
    "isort>=5.13",
    "coverage>=7.0",
]
io = [
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "h5py>=3.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=happygene --cov-report=term-missing"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
minversion = "8.0"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["happygene"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]
