[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "happygene"
version = "0.1.0"
description = "Framework for simulating gene network evolution with selection, mutation, and expression dynamics"
authors = ["Eric Mumford <eric@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/happygene"
homepage = "https://github.com/yourusername/happygene"
keywords = ["genetics", "evolution", "simulation", "agent-based-modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
pandas = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.0"
ruff = "^0.0"
sphinx = "^7.0"
sphinx-rtd-theme = "^1.3"
pytest-xdist = "^3.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=happygene --cov-report=html --cov-report=term-missing"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
minversion = "7.0"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W"]
ignore = []
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
]

[tool.coverage.run]
source = ["happygene"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
